2018-09-18 Irene Córdoba <irene.cordoba@upm.es>

* functions.R: doc fixes.

2018-11-07 Gherardo Varando <gherardo.varando@gmail.com> 

* README.md: update citation and link.
