@@ -1,6 +1,5 @@
 #' gmat: Graphically constrained matrices.
 #'
-#' @import igraph
 #' @importFrom stats rnorm runif rbinom
 #' @import methods
 #'
