@@ -1,8 +1,14 @@
 2018-09-18 Irene Córdoba <irene.cordoba@upm.es>
 
-* functions.R: doc fixes.
+* functions.R: Doc fixes.
+* rgmat.Rd: Regenerated.
 
 2018-11-07 Gherardo Varando <gherardo.varando@gmail.com> 
 
-* README.md: update citation and link.
+* README.md: Update citation and link.
 
+2018-11-07 Irene Córdoba <irene.cordoba@upm.es>
+
+* functions.R: Explicit use of :: for igraph functions.
+* gmat.R: Removed import of igraph package.
+* NAMESPACE: Regenerated.
